GNU mailutils NEWS -- history of user-visible changes. 2019-08-29
Copyright (C) 2002-2019 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.

Version 3.7.90 (git)

* Use of TLS in pop3d run from inetd

New global configuration statement "tls-mode" configures the TLS for
use in inetd mode.
    
The certificate and key files are configured by the global "tls"
compound statement.
    
Example configuration (pop3s server):
    
  mode inetd;
  tls-mode connection;
  tls {
      ssl-key-file /etc/ssl/key.pem;
      ssl-certificate-file /etc/ssl/cert.pem;
  }


Version 3.7 - 2019-06-21

* Support for the new mailbox format - dotmail

Dotmail is a replacement for traditional mbox format, proposed by
Kurt Hackenberg. A dotmail mailbox is a single disk file, where
messages are stored sequentially. Each message ends with a single
dot (similar to the format used in the SMTP DATA command). Any dot
appearing at the start of the line is doubled, to prevent it from
being interpreted as end of message marker.

* Improve automatic mailbox format detection

This release introduces a notion of accuracy level for the purpose of
mailbox format detection.

Selecting the accuracy level allows the user to achieve the desired
balance between the speed of the folder scan and accuracy of mailbox
format detection.

The accuracy level can be set either from the configuration file,
using the mailbox.accuracy-level statement, or from the environment,
via the MU_AUTODETECT_ACCURACY variable.

The default accuracy level 1 discerns valid mbox and dotmail mailboxes
providing reasonable scan speed.

Level 0 (previous default) does not discern them, but provides maximal
speed.

Level 2 and higher provide better accuracy at the price of speed.

* Bugfixes

** mh - correctly parse +/abs/path folder specification
** tls - fix handle interruptions in read routine